# python_file_type_detector

./: pyproject.toml
.github/workflows/: README.md  SETUP.md  create-release.yml  pypi-release.yml
src/file_type_infer/: inferencer.py
tests/: test_lexical_inferencer.py  test_magic_inferencer.py
