[project]
name = "file-type-infer"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "devcomfort", email = "im@devcomfort.me" }
]
dependencies = [
    "python-magic>=0.4.27",
    "magika>=1.0.1",
    "pytest>=8.4.2",
    "loguru>=0.7.3",
    "mkdocs>=1.6.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/file_type_infer"]
